# tg-chat-bot

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
migration/: env.py
migration/versions/: 15ab8fe84d5b_initial_revision.py  fad515a96b43_update_users_table.py
src/chat_bot/: ai_chat_client.py  ai_chat_service.py  config.py  crud.py  database.py  enums.py  main.py  models.py  prompts.py  redis_client.py  redis_crud.py  utils.py
