[project]
name = "chat-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "openai>=1.76.2",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
]

[project.scripts]
chat-bot = "chat_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["ALL"] 
ignore = ["D100", "D104", "TD001", "TD002", "TD003", "TD004", "FIX002", "TRY003", "N805"]
